# GPUCollisionDetection

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: CPM.cmake  build-doxygen.cmake  clang-format.cmake  fetch-argparse.cmake  fetch-cccl.cmake  fetch-glad.cmake  fetch-glfw.cmake  fetch-glm.cmake  fetch-gtest.cmake  fetch-opencv.cmake
docs/: Doxyfile.in
include/collision_detection/: gpu_scan.cuh  gpu_sort.cuh  gpu_sort.h
include/collision_detection/cpu/: cpu_collision_detection.hpp
include/collision_detection/gpu/: gpu_collision_detection.hpp
include/common/camera/: camera.hpp
include/common/mesh/: mesh.hpp
include/common/shader/: shader.hpp
include/common/simulation/: field.hpp  simulation.hpp
include/common/solid/: solid.hpp
scripts/: clang-formatter.py
src/collision_detection/: CMakeLists.txt  gpu_scan.cu  main.cu
src/collision_detection/cpu/: cpu_collision_detection.cpp  cpu_sweep_and_prune_collision_detection.cpp
src/collision_detection/gpu/: gpu_sweep_and_prune_collision_detection.cu  gpu_sweep_and_prune_collision_detection_kernel.cuh
src/common/: CMakeLists.txt
src/common/camera/: camera.cpp
src/common/mesh/: mesh.cpp
src/common/shader/: shader.cpp
src/common/simulation/: field.cpp  simulation.cpp
src/common/solid/: environment_box.cpp  ground.cpp  solid.cpp
src/demo/: CMakeLists.txt  main.cpp
src/shader/: common.fs  common.vs  instanced.fs  instanced.vs
test/: CMakeLists.txt
test/collision_detection/: scan_test.cu  sort_test.cpp  sort_test.cu
